--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,10 @@ body {
   outline: none;
 }
 
+#btn-contact {
+  padding-top: 20px;
+}
+
 /* Headings */
 h2, h3 {
   font-family: 'Poppins', sans-serif;
