--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
 }
 .card:nth-of-type(3) {
   animation-delay: 0.4s;
+  background-color: var(--grey-dark);
 }
 .card:nth-of-type(4) {
   animation-delay: 0.6s;
