--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 }
 .card:nth-of-type(2) {
   animation-delay: 0.2s;
-  background-color: var(--grey-dark);
+  background-color: var(--grey-medium);
 }
 .card:nth-of-type(3) {
   animation-delay: 0.4s;
